# propertykuatt

./: .gitignore  LICENSE  STATUS.md  index.html  requirements.txt  sydney-property-finder-v2.html  sydney-property-finder-v3.html
nsw-site-controls/: .gitignore  README.md  SETUP-FOR-BEGINNERS.md  pyproject.toml
nsw-site-controls/nsw_site_controls/: __init__.py  arcgis.py  cli.py  dcp.py  lep.py  locate.py  registry.py  sheet.py
nsw-site-controls/nsw_site_controls/data/: ryde_dcp_2014.yaml
nsw-site-controls/scripts/: fetch_ryde_dcp.py  record_fixtures.py
nsw-site-controls/tests/: conftest.py  test_arcgis.py  test_dcp.py  test_lep.py  test_live.py  test_locate.py  test_sheet.py
nsw-site-controls/tests/fixtures/: ryde_r2_fsr.json
nsw-site-controls/web/: README.md  app.js  index.html
pipeline/: aggregator.py  cli.py  config.py  geocode.py  schema.py
pipeline/sources/: nsw_planning_portal.py  opendata_extract.py
pipeline/sources/council_trackers/: __init__.py  base.py  civica_authority.py  open_cities.py  registry.py  t1_etrack.py
